dep-storage.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 3
  selector:
   matchLabels:
    app: nginx
  template:
    metadata:
      labels:
       app: nginx
    spec:
      containers:
        - name : nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html
              name: my-volume
      volumes:
       - name: my-volume
         persistentVolumeClaim:
           claimName: local-pvc
