dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: nginx
spec:
  replicas: 5
  selector:
   matchLabels:
    app: nginx
  template:
    metadata:
      labels:
       app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
           - containerPort: 80
